--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,17 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: <p align"right" Modified test minimal theme </p>
+logo: /assets/img/test1.jpg
+description: 
+  <p align="center">
+  <a href="docs/SUPPORT.md">support_doc</a> |
+  <a href="https://github.com/kudumulaanuja">GitHub</a>
+  <br>   
+  I'm taking a course on AI/ML.
+  <br>
+  </p>
+
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
